--- a/src/app/app.html
+++ b/src/app/app.html
@@ -27,6 +27,7 @@
     <a routerLink="/swordland" (click)="toggleSideNav()">Swordland</a>
     <a routerLink="/mystic-trial" (click)="toggleSideNav()">Mystic Trial</a>
     <a routerLink="/castle-event" (click)="toggleSideNav()">Castle</a>
+    <a routerLink="/svs-prep" (click)="toggleSideNav()">SvS Prep</a>
     <div class="nav-category">Tools</div>
     <a routerLink="/tools/bear-optimizer" (click)="toggleSideNav()">Bear Optimizer</a>
     <a routerLink="/tools/hero-gear" (click)="toggleSideNav()">Hero Gear</a>
