feat: add dedicated login page with email/password and Google authentication, and update sign-in flow.

--- a/src/app/user-profile/user-profile.html
+++ b/src/app/user-profile/user-profile.html
@@ -28,7 +28,7 @@
     </button>
     @if (isDropdownOpen) {
     <div class="dropdown-menu">
-        <a (click)="signInWithGoogle()">Sign In with Google</a>
+        <a routerLink="/login" (click)="isDropdownOpen = false">Sign In</a>
     </div>
     }
     }
