feat: add Vikings navigation link

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -25,6 +25,7 @@
     <div class="nav-category">Events</div>
     <a routerLink="/events/bear" (click)="toggleSideNav()">Bear Hunt</a>
     <a routerLink="/swordland" (click)="toggleSideNav()">Swordland</a>
+    <a routerLink="/vikings" (click)="toggleSideNav()">Vikings</a>
     <a routerLink="/mystic-trial" (click)="toggleSideNav()">Mystic Trial</a>
     <a routerLink="/castle-event" (click)="toggleSideNav()">Castle</a>
     <a routerLink="/svs-prep" (click)="toggleSideNav()">SvS Prep</a>
