feat: introduce `VikingsStatus` type and enable `offline_not_empty` players to reinforce, removing `not_available` status.

--- a/src/app/vikings-event/vikings-event.html
+++ b/src/app/vikings-event/vikings-event.html
@@ -37,7 +37,7 @@
                             <select #statusSelect [value]="existingReg?.status || 'online'">
                                 <option value="online">Online</option>
                                 <option value="offline_empty">Offline (Empty)</option>
-                                <option value="not_available">Not Available</option>
+                                <option value="offline_not_empty">Offline (Not Empty)</option>
                             </select>
                         </div>
 
